--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,3 +46,51 @@ add_subdirectory(src)
 #
 add_subdirectory(doc)
 
+if(NOT DEFINED INSTALL_EXAMPLESDIR)
+    set(INSTALL_EXAMPLESDIR "examples")
+endif()
+
+set(INSTALL_EXAMPLEDIR "${INSTALL_EXAMPLESDIR}/widgets/mainwindows/application")
+
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
+
+qt_standard_project_setup()
+
+qt_add_executable(web-app-demo
+    main.cpp
+    mainwindow.cpp mainwindow.h
+)
+
+set_target_properties(web-app-demo PROPERTIES
+    WIN32_EXECUTABLE TRUE
+    MACOSX_BUNDLE TRUE
+)
+
+target_link_libraries(web-app-demo PRIVATE
+    Qt6::Core
+    Qt6::Gui
+    Qt6::Widgets
+)
+
+# Resources:
+set(application_resource_files
+    "images/copy.png"
+    "images/cut.png"
+    "images/new.png"
+    "images/open.png"
+    "images/paste.png"
+    "images/save.png"
+)
+
+qt_add_resources(web-app-demo "application"
+    PREFIX
+        "/"
+    FILES
+        ${application_resource_files}
+)
+
+install(TARGETS web-app-demo
+    RUNTIME DESTINATION "${INSTALL_EXAMPLEDIR}"
+    BUNDLE DESTINATION "${INSTALL_EXAMPLEDIR}"
+    LIBRARY DESTINATION "${INSTALL_EXAMPLEDIR}"
+)
