--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -306,13 +306,14 @@ add_library(gplates-lib STATIC EXCLUDE_FROM_ALL
 #
 # Add 'gplates-no-gui' executable target (linked to gplates-lib).
 #
-add_executable(gplates-no-gui EXCLUDE_FROM_ALL gplates_demo_no_gui_main.cc ScribeExportGPlatesDemoNoGui.cc)
+add_executable(gplates-no-gui EXCLUDE_FROM_ALL gplates_demo_no_gui_main.cc ScribeExportGPlatesDemoNoGui.cc reconstructions.cc)
 target_link_libraries(gplates-no-gui PRIVATE gplates-lib)
+
 if (EMSCRIPTEN)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -s WASM=1 -s MODULARIZE=1")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -s WASM=1 -s MODULARIZE=1 -sNO_DISABLE_EXCEPTION_CATCHING")
 endif()
 #set_target_properties(gplates-no-gui PROPERTIES COMPILE_FLAGS "-sMAIN_MODULE")
-#set_target_properties(gplates-no-gui PROPERTIES LINK_FLAGS "-s MODULARIZE=1 --no-entry")
+set_target_properties(gplates-no-gui PROPERTIES LINK_FLAGS "--preload-file C:\\Users\\yunwei37\\Documents\\bise\\gplates_2.3.0_src\\gplates_2.3.0_src\\src\\qt-resources")
 
 #
 # Add 'gplates-unit-test' executable (linked to gplates-lib).
