--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "cwchar": "cpp",
         "cwctype": "cpp",
         "*.ipp": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "iostream": "cpp",
+        "streambuf": "cpp"
     }
 }
