--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -32,4 +32,4 @@ set(srcs
 )
 
 # # Add the source files to the gplates static library.
-# target_sources_util(gplates-lib PRIVATE ${srcs})
+target_sources_util(gplates-lib PRIVATE ${srcs})
