--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -25,30 +25,30 @@ set(srcs
     CanvasToolWorkflows.h
     ChooseCanvasToolUndoCommand.cc
     ChooseCanvasToolUndoCommand.h
-    Colour.cc
-    Colour.h
-    ColourFilter.h
-    ColourNameSet.cc
-    ColourNameSet.h
-    ColourPalette.h
-    ColourPaletteAdapter.h
-    ColourPaletteRangeRemapper.h
-    ColourPaletteUtils.cc
-    ColourPaletteUtils.h
-    ColourPaletteVisitor.h
-    ColourProxy.cc
-    ColourProxy.h
-    ColourRawRaster.h
-    ColourScaleGenerator.cc
-    ColourScaleGenerator.h
-    ColourScheme.h
-    ColourSchemeContainer.cc
-    ColourSchemeContainer.h
-    ColourSchemeDelegator.cc
-    ColourSchemeDelegator.h
-    ColourSchemeInfo.h
-    ColourSpectrum.cc
-    ColourSpectrum.h
+    # Colour.cc
+    # Colour.h
+    # ColourFilter.h
+    # ColourNameSet.cc
+    # ColourNameSet.h
+    # ColourPalette.h
+    # ColourPaletteAdapter.h
+    # ColourPaletteRangeRemapper.h
+    # ColourPaletteUtils.cc
+    # ColourPaletteUtils.h
+    # ColourPaletteVisitor.h
+    # ColourProxy.cc
+    # ColourProxy.h
+    # ColourRawRaster.h
+    # ColourScaleGenerator.cc
+    # ColourScaleGenerator.h
+    # ColourScheme.h
+    # ColourSchemeContainer.cc
+    # ColourSchemeContainer.h
+    # ColourSchemeDelegator.cc
+    # ColourSchemeDelegator.h
+    # ColourSchemeInfo.h
+    # ColourSpectrum.cc
+    # ColourSpectrum.h
     CommandServer.cc
     CommandServer.h
     Completionist.cc
@@ -191,8 +191,8 @@ set(srcs
     MapRenderedGeometryLayerPainter.h
     MapTransform.cc
     MapTransform.h
-    Mipmapper.cc
-    Mipmapper.h
+    # Mipmapper.cc
+    # Mipmapper.h
     OpaqueSphere.cc
     OpaqueSphere.h
     Palette.cc
@@ -208,8 +208,8 @@ set(srcs
     # PythonConsoleHistory.h
     # PythonManager.cc
     # PythonManager.h
-    RasterColourPalette.cc
-    RasterColourPalette.h
+    # RasterColourPalette.cc
+    # RasterColourPalette.h
     RenderSettings.h
     SceneLightingParameters.cc
     SceneLightingParameters.h
@@ -265,7 +265,7 @@ set(srcs
 )
 
 # Add the source files to the gplates static library.
-# target_sources_util(gplates-lib PRIVATE ${srcs})
+target_sources_util(gplates-ui-lib PRIVATE ${srcs})
 
 # Add the source files to the pygplates extension module.
 #
