--- a/src/presentation/CMakeLists.txt
+++ b/src/presentation/CMakeLists.txt
@@ -58,7 +58,7 @@ set(srcs
 )
 
 # Add the source files to the gplates static library.
-# target_sources_util(gplates-lib PRIVATE ${srcs})
+target_sources_util(gplates-ui-lib PRIVATE ${srcs})
 
 # Add the source files to the pygplates extension module.
 #
